codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Все модели
  Полный каталог моделей. Для ручного выбора из терминала можно использовать
  codex -m <model_name> или config.toml

  Найти модель в каталоге
  ← К быстрым пресетам        Вернуться к быстрым режимам выбора модели.
› test-visible-model (текущий)  test-visible-model description

  Enter открывает режим размышлений для выбранной модели, Esc закрывает окно.
