codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Режим размышлений для gpt-5.1-codex-max
  Провайдер: OpenAI. Подберите баланс между скоростью ответа, качеством и
  расходом токенов.

  Найти режим размышлений
  ← К списку моделей             Вернуться к каталогу моделей текущего
                                  провайдера.
  Лёгкий                          Самый быстрый режим: минимум паузы, минимум
                                  размышлений.
  Стандартный (рекомендуется)     Повседневный режим с нормальным балансом
                                  скорости и качества.
› Глубокий (текущий)              Больше времени на разбор сложных,
                                  неоднозначных и многошаговых задач.
  Максимальный                    Максимальный запас на тяжёлые задачи,
                                  длинные цепочки решений и риск ошибки.

  Нажмите enter для подтверждения или esc для возврата
