codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Все модели
  Полный каталог моделей. Для ручного выбора из терминала можно использовать
  codex -m <model_name> или config.toml

  Найти модель в каталоге
  ← К быстрым пресетам          Вернуться к быстрым режимам выбора модели.
› gpt-5.3-codex (по умолчанию)  Самая свежая агентная модель для разработки и
                                 сложных кодовых задач.
  gpt-5.4                        Самая свежая агентная модель для разработки и
                                 сложных кодовых задач.
  gpt-5.2-codex                  Сильная агентная модель для разработки и
                                 рабочих сценариев с кодом.
  gpt-5.1-codex-max              Флагманская модель, заточенная под Codex:
                                 сильна в сложном коде и длинных цепочках
                                 рассуждений.
  gpt-5.2                        Свежая флагманская модель с заметным усилением
                                 в знаниях, рассуждениях и работе с кодом.
  gpt-5.1-codex-mini             Упор на скорость и цену: отвечает быстрее и
                                 дешевле, но слабее на тяжёлых задачах.

  Enter открывает режим размышлений для выбранной модели, Esc закрывает окно.
