codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__multi_agent_enable_prompt.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Включить сабагентов?
  Сейчас эта возможность отключена в конфиге и не используется в текущей сессии.

› 1. Да, включить  Сохранить настройку сейчас. После запуска новой сессии
                   станут доступны сабагенты.
  2. Не сейчас     Оставить сабагентов выключенными и вернуться к этому позже.

  Нажмите enter для подтверждения или esc для возврата
