codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Тон ответов
  Подберите стиль, с которым Lavilas Codex будет отвечать в этой сессии.

  1. Дружелюбный              Мягкий, живой и поддерживающий тон ответа.
› 2. Прагматичный (текущий)   Коротко, прямо и с упором на действие, без
                              лишней воды.

  Нажмите enter для подтверждения или esc для возврата
