codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_no_selected.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Переходить к коду по этому плану?

  1. Да, начать реализацию  Выйти из Plan, перейти в обычный режим и начать
                             выполнять шаги плана.
› 2. Пока остаться в Plan   Остаться в режиме Plan и ещё уточнить шаги перед
                             переходом к коду.

  Нажмите enter для подтверждения или esc для возврата
