codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugin_detail_popup_installable.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Плагины
  Figma · Можно установить · ChatGPT Marketplace
  Данные, переданные этому приложению, регулируются его условиями использования и политикой
  конфиденциальности. Подробнее.
  Turn Figma files into implementation context.

› 1. Назад к плагинам   Вернуться к списку плагинов.
  2. Установить плагин  Установить этот плагин сейчас.
     Навыки             design-review, extract-copy
     Приложения         Figma, Slack
     MCP-серверы        figma-mcp, docs-mcp

  Esc закрывает окно.
