codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugin_detail_popup_installed.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Плагины
  Figma · Установлен · ChatGPT Marketplace
  Turn Figma files into implementation context.

› 1. Назад к плагинам  Вернуться к списку плагинов.
  2. Удалить плагин    Удалить этот плагин сейчас.
     Навыки            design-review, extract-copy
     Приложения        Figma, Slack
     MCP-серверы       figma-mcp, docs-mcp

  Esc закрывает окно.
