codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_curated_marketplace.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Плагины
  Просматривайте плагины из доступных маркетплейсов.
  Установлено 1 из 4 доступных плагинов.
  Показываю кэшированные данные маркетплейса: remote sync timed out

  Начните вводить для поиска по плагинам
› Alpha Sync          Установлен · Отключен   Enter открывает карточку плагина.
  Bravo Search        Доступен               · ChatGPT Marketplace · Search docs and tickets.
  Hidden Repo Plugin  Доступен               · Repo Marketplace · Should not be shown in /plugins.
  Starter             Доступен по умолчанию  · ChatGPT Marketplace · Included by default.

  Esc закрывает окно.
